--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c" rel="stylesheet">
-    <title>Minesweeper Vue</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="/dist/build.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="initial-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover"><link href="https://fonts.googleapis.com/css?family=Alata|Lato|Nunito&display=swap" rel=stylesheet><title>Curriculum Vitae - Jeroen Smienk</title><link href=/css/app.78d10d39.css rel=preload as=style><link href=/js/app.80e69777.js rel=preload as=script><link href=/js/chunk-vendors.7e639bb2.js rel=preload as=script><link href=/css/app.78d10d39.css rel=stylesheet></head><body><noscript><strong>Please enable JavaScript to view this website.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.7e639bb2.js></script><script src=/js/app.80e69777.js></script></body></html>
